# VerseLspCE

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md
VerseLspCE/: VerseLspCE.Build.cs  VerseLspCE.Target.cs
VerseLspCE/Private/: SemanticTokens.cpp  SourceManagement.cpp  SymbolInfo.cpp  VerseLspCE.cpp  VerseLspCE.hpp  verse_lsp_rs.h
editors/vscode/: .gitignore  .vscodeignore  LICENSE  README.md  package.json  tsconfig.json
editors/vscode/contrib/: schema-vproject.json
editors/vscode/src/: extension.ts
verse_lsp_rs/: Cargo.toml
verse_lsp_rs/src/: entrypoint.rs  ffi.rs  lib.rs  notifications.rs  requests.rs  server.rs  utils.rs  verse.rs  vproject.rs
verse_lsp_rs/src/features/: mod.rs  semantic_tokens.rs  workspace.rs
verse_lsp_rs/src/server/: messages.rs  mod.rs
