[package]
name = "verse_lsp_rs"
description = "Rust part of VerseLspCE"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
anyhow = "1.0.100"

lsp-server = "0.7.9"
lsp-types = "0.95.1"
fxhash = "0.2.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.28"
simple_logger = { version = "5.1.0", default-features = false, features = ["stderr", "colors"] }

ignore = "0.4.25"
